# service/AdministrationService.js
@@ -1,189 +1,5 @@
 'use strict';
 
-
-/**
- * Load Group
- * 
- *
- * code String The group code
- * returns inline_response_200_2
- **/
-exports.catalogueGroupsCodeGET = function(code) {
-  return new Promise(function(resolve, reject) {
-    var examples = {};
-    examples['application/json'] = {
-  "items" : [ {
-    "code" : "1",
-    "name" : "Heavy machinery"
-  } ]
-};
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
-    }
-  });
-}
-
-
-/**
- * List catalogue assemblies for category
- * 
- *
- * category String The category code
- * returns inline_response_200_2
- **/
-exports.catalogueProductsGET = function(category) {
-  return new Promise(function(resolve, reject) {
-    var examples = {};
-    examples['application/json'] = {
-  "items" : [ {
-    "equipment" : {
-      "article" : {
-        "number" : "1234567890",
-        "name" : "The Dumper",
-        "description" : "Lorem imposum",
-        "sraCode" : "211313"
-      },
-      "offer" : {
-        "name" : "\"Hyra\"",
-        "amount" : "123.45",
-        "price" : "12345 kr / alldager",
-        "unit" : "st"
-      },
-      "services" : {
-        "article" : {
-          "number" : "1234567890",
-          "name" : "The Dumper",
-          "description" : "Lorem imposum",
-          "sraCode" : "211313"
-        },
-        "offer" : {
-          "name" : "\"Hyra\"",
-          "amount" : "123.45",
-          "price" : "12345 kr / alldager",
-          "unit" : "st"
-        }
-      }
-    },
-    "accessories" : [ {
-      "article" : {
-        "number" : "1234567890",
-        "name" : "The Dumper",
-        "description" : "Lorem imposum",
-        "sraCode" : "211313"
-      },
-      "offer" : {
-        "name" : "\"Hyra\"",
-        "amount" : "123.45",
-        "price" : "12345 kr / alldager",
-        "unit" : "st",
-        "preSelected" : true
-      },
-      "services" : {
-        "article" : {
-          "number" : "1234567890",
-          "name" : "The Dumper",
-          "description" : "Lorem imposum",
-          "sraCode" : "211313"
-        },
-        "offer" : {
-          "name" : "\"Hyra\"",
-          "amount" : "123.45",
-          "price" : "12345 kr / alldager",
-          "unit" : "st"
-        }
-      }
-    } ]
-  } ]
-};
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
-    }
-  });
-}
-
-
-/**
- * Get catalogue assembly
- * Allow user to browse products data
- *
- * number Integer 
- * returns inline_response_200_3
- **/
-exports.catalogueProductsNumberGET = function(number) {
-  return new Promise(function(resolve, reject) {
-    var examples = {};
-    examples['application/json'] = {
-  "equipment" : {
-    "article" : {
-      "number" : "1234567890",
-      "name" : "The Dumper",
-      "description" : "Lorem imposum",
-      "sraCode" : "211313"
-    },
-    "offer" : {
-      "name" : "\"Hyra\"",
-      "amount" : "123.45",
-      "price" : "12345 kr / alldager",
-      "unit" : "st"
-    },
-    "services" : {
-      "article" : {
-        "number" : "1234567890",
-        "name" : "The Dumper",
-        "description" : "Lorem imposum",
-        "sraCode" : "211313"
-      },
-      "offer" : {
-        "name" : "\"Hyra\"",
-        "amount" : "123.45",
-        "price" : "12345 kr / alldager",
-        "unit" : "st"
-      }
-    }
-  },
-  "accessories" : [ {
-    "article" : {
-      "number" : "1234567890",
-      "name" : "The Dumper",
-      "description" : "Lorem imposum",
-      "sraCode" : "211313"
-    },
-    "offer" : {
-      "name" : "\"Hyra\"",
-      "amount" : "123.45",
-      "price" : "12345 kr / alldager",
-      "unit" : "st",
-      "preSelected" : true
-    },
-    "services" : {
-      "article" : {
-        "number" : "1234567890",
-        "name" : "The Dumper",
-        "description" : "Lorem imposum",
-        "sraCode" : "211313"
-      },
-      "offer" : {
-        "name" : "\"Hyra\"",
-        "amount" : "123.45",
-        "price" : "12345 kr / alldager",
-        "unit" : "st"
-      }
-    }
-  } ]
-};
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
-    }
-  });
-}
-
-
 /**
  * Request single Depo by \"code\" identifier.
  * 
